@@ -340,6 +340,11 @@ static const struct fuse_opt option_list[] = {
         .offset=    offsetof(struct s3b_config, fuse_ops.stats_filename),
     },
     {
+        .templ=     "--rss",
+        .offset=    offsetof(struct s3b_config, http_io.rss),
+        .value=     1
+    },
+    {
         .templ=     "--ssl",
         .offset=    offsetof(struct s3b_config, ssl),
         .value=     1
@@ -1238,7 +1243,7 @@ validate_config(void)
     if (config.ec_protect.cache_size > 0
       && config.ec_protect.cache_time == 0
       && config.ec_protect.cache_size < config.num_blocks) {
-        warnx("`md5CacheTime' is infinite but `md5CacheSize' is less than the number of blocks, so eventually deadlock will result");
+        warnx("`md5CacheTime' is infinite but `md5CacheSize' is less than the number of blocks, so eventual deadlock will result");
         return -1;
     }
 
@@ -1530,6 +1535,7 @@ usage(void)
     fprintf(stderr, "\t--%-27s %s\n", "readAhead=NUM", "Number of blocks to read-ahead");
     fprintf(stderr, "\t--%-27s %s\n", "readAheadTrigger=NUM", "# of sequentially read blocks to trigger read-ahead");
     fprintf(stderr, "\t--%-27s %s\n", "readOnly", "Return `Read-only file system' error for write attempts");
+    fprintf(stderr, "\t--%-27s %s\n", "rss", "Target written blocks for Reduced Redundancy Storage");
     fprintf(stderr, "\t--%-27s %s\n", "size=SIZE", "File size (with optional suffix 'K', 'M', 'G', etc.)");
     fprintf(stderr, "\t--%-27s %s\n", "ssl", "Same as --baseURL " S3_BASE_URL_HTTPS);
     fprintf(stderr, "\t--%-27s %s\n", "compress[=LEVEL]", "Enable block compression, with 1=fast up to 9=small");
